# avsim

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
PythonAPI/: CMakeLists.txt  Entity.cpp  Geom.cpp  Road.cpp  World.cpp  libavsim.cpp
source/: CMakeLists.txt
source/entity/: Agent.cpp  Agent.hpp  AgentState.hpp  Entity.cpp  Entity.hpp  Obstacle.cpp  Obstacle.hpp
source/geom/: BoundingBox.hpp  CollisionCheck.hpp  Geometry.hpp  Math.hpp  Transform.hpp  Vector2D.hpp
source/road/: Lane.hpp  Road.hpp
source/utils/: RandomGenerator.hpp  Renderer.hpp
source/world/: World.cpp  World.hpp
